--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <h1>💖 ¿Serías mi San Valentín? 💖</h1>
-    <p>Hola Mi Niña,</p>
+    <p>Hola Mi Amor,</p>
     <p>
       Sé que es un día especial, y quiero hacerlo aún más especial contigo.
     </p>
